--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -134,6 +134,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="printHistory"
+            android:visibility="gone"
             android:text="History" />
     </LinearLayout>
 
