--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.zacharee1.kinematics.MainActivity">
+    tools:context="com.zacharee1.kinematics.MainActivity"
+    android:focusableInTouchMode="true"
+    android:focusedByDefault="true">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -25,7 +27,7 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent">
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/t"
@@ -56,7 +58,7 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent">
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/vi"
@@ -105,6 +107,12 @@
                 </TableRow>
 
             </TableLayout>
+
+            <include
+                layout="@layout/history_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
 
         </LinearLayout>
     </ScrollView>
