--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="table_row_height">30dp</dimen>
+    <dimen name="detail_margin_side">5dp</dimen>
 </resources>
