--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,4 @@
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat">
-    </style>
-
+    <style name="AppTheme" parent="Theme.AppCompat" />
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.NoActionBar" />
 </resources>
