--- a/app/src/main/res/layout/layout_full_history.xml
+++ b/app/src/main/res/layout/layout_full_history.xml
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|end"
                 android:text="Time ="
                 android:textAlignment="textEnd"
                 android:textSize="18sp" />
