--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/history_list"
     tools:context="com.zacharee1.kinematics.HistoryActivity"
-    android:id="@+id/history_list">
-
-</androidx.recyclerview.widget.RecyclerView>
+    />
