--- a/app/src/main/res/layout/history_button.xml
+++ b/app/src/main/res/layout/history_button.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView android:background="@drawable/selector"
+<ImageView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/selector"
     android:focusable="true"
     android:clickable="true"
     android:id="@+id/action_history"
     android:layout_gravity="end"
-    app:srcCompat="@drawable/ic_library_books_black_24dp"
     android:tint="#fff"
     android:scaleType="center"
     android:layout_width="48dp"
     android:layout_height="48dp"
     android:layout_marginEnd="4dp"
     android:layout_marginStart="4dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" />
+    app:srcCompat="@drawable/ic_library_books_black_24dp"
+    />
