--- a/app/src/main/res/layout/layout_full_history.xml
+++ b/app/src/main/res/layout/layout_full_history.xml
@@ -24,7 +24,8 @@
                 android:gravity="center_vertical|end"
                 android:text="Time ="
                 android:textAlignment="textEnd"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                />
 
             <TextView
                 android:id="@+id/time_measure"
@@ -38,17 +39,19 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center_vertical"
                 android:textAlignment="center"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                />
 
             <TextView
                 android:id="@+id/time_unit"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|start"
                 android:text="s"
                 android:textAlignment="textStart"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                />
         </TableRow>
 
         <TableRow
@@ -62,10 +65,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|end"
                 android:text="Acc ="
                 android:textAlignment="textEnd"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                />
 
             <TextView
                 android:id="@+id/acc_measure"
@@ -76,20 +80,22 @@
                 android:layout_marginStart="@dimen/detail_margin_side"
                 android:clickable="true"
                 android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
+                android:background="?android:attr/selectableItemBackground"
                 android:gravity="center_vertical"
                 android:textAlignment="center"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                />
 
             <TextView
                 android:id="@+id/acc_unit"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|start"
                 android:text="m/s²"
                 android:textAlignment="textStart"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                />
 
         </TableRow>
 
@@ -104,10 +110,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|end"
                 android:text="VIinital ="
                 android:textAlignment="textEnd"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                />
 
             <TextView
                 android:id="@+id/vi_measure"
@@ -118,7 +125,7 @@
                 android:layout_marginStart="@dimen/detail_margin_side"
                 android:clickable="true"
                 android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
+                android:background="?android:attr/selectableItemBackground"
                 android:gravity="center_vertical"
                 android:textAlignment="center"
                 android:textSize="18sp" />
@@ -128,7 +135,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|start"
                 android:text="m/s"
                 android:textAlignment="textStart"
                 android:textSize="18sp" />
@@ -146,7 +153,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|end"
                 android:text="VFinal ="
                 android:textAlignment="textEnd"
                 android:textSize="18sp" />
@@ -160,7 +167,7 @@
                 android:layout_marginStart="@dimen/detail_margin_side"
                 android:clickable="true"
                 android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
+                android:background="?android:attr/selectableItemBackground"
                 android:gravity="center_vertical"
                 android:textAlignment="center"
                 android:textSize="18sp" />
@@ -170,7 +177,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|start"
                 android:text="m/s"
                 android:textAlignment="textStart"
                 android:textSize="18sp" />
@@ -187,7 +194,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|end"
                 android:text="Δx ="
                 android:textAlignment="textEnd"
                 android:textSize="18sp" />
@@ -211,7 +218,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|start"
                 android:text="m"
                 android:textAlignment="textStart"
                 android:textSize="18sp" />
